More memory tuning